Hive Change Log

Trunk - unreleased changes

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
    HIVE-389. Option to build without ivy (jssarma)

    HIVE-360. Generalize the FileFormat Interface in Hive.
    (He Yongqiang via zshao)

  OPTIMIZATIONS

    HIVE-279. Predicate Pushdown support (Prasad Chakka via athusoo).

    HIVE-266. Use Text instead of String (Zheng Shao via namit).

  BUG FIXES

    HIVE-381. Fix JDBC HiveResultSet's next function.
    (Kim P via namit)
    
    HIVE-387. Use URI from FileSystem Object instead of from HADOOPFS
    directly. (jssarma)

    HIVE-385. Split Driver's run into compile and execute.
    (Neil Conway via namit)
  
    HIVE-393. Remove unnecessary checks in movetask for file type.
    (Zheng Shao via namit)

    HIVE-403. remove password param from job config that is submitted to job
    tracker and from log (Prasad Chakka)

    HIVE-407. fix permissions for test scripts in release tarball.
    (Ashish Thusoo via namit)

    HIVE-414. Add Hive Web Interface code to Eclipse config
    (Prasad Chakka)

Release 0.3.0 - Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-337. LazySimpleSerDe to support multi-level nested array, map, struct
    types. (zshao)

    HIVE-313. Add UDF date_add, date_sub, datediff. (zshao)

    HIVE-79. Print number of rows inserted to table(s).
    (Suresh Antony via zshao)

    HIVE-30. Hive Web User Interface. (Edward Capriolo via athusoo)

    HIVE-343. Include py packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-299. Include php packages for thrift service.
    (Raghotham Murthy via zshao)

    HIVE-82 Support for building tarballs and javadocs
    (Ashish Thusoo via rmurthy)

  IMPROVEMENTS

    HIVE-132. Show table and describe results to be read via FetchTask.
    (Raghotham Murthy via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-349. Fix TestCliDriver when there are test cases with no tasks.
    (Suresh Antony via zshao)
